<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/gameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/mainContent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/mainContent"
        android:layout_width="350dp"
        android:layout_height="500dp"
        android:background="@drawable/playerbg"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addtitle"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp"/>

        <LinearLayout
            android:id="@+id/addPlayer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:background="@color/colorAccent"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/playerName"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:hint="@string/insert"
                android:layout_gravity="center" />

            <Button
                android:id="@+id/savePlayerBtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@android:drawable/ic_menu_add" />

        </LinearLayout>

        <TextView
            android:id="@+id/empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/empty" />

        <ListView
            android:id="@+id/playerList"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp" />

    </LinearLayout>

    <Button
        android:id="@+id/selbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ready"
        android:background="@drawable/buttons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainContent" />

    <Button
        android:id="@+id/closebtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@android:drawable/ic_menu_close_clear_cancel"
        app:layout_constraintBottom_toTopOf="@+id/mainContent"
        app:layout_constraintEnd_toStartOf="@+id/gameTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/pausebtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@android:drawable/ic_media_pause"
        app:layout_constraintBottom_toTopOf="@+id/mainContent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/gameTitle"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>